--- a/ArtLancer.csproj
+++ b/ArtLancer.csproj
@@ -136,5 +136,8 @@
   <ItemGroup>
     <Resource Include="Omu.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="OmuAnim_Rough.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
